# interview-tasks

./: README.md
tree_task/: CMakeLists.txt  ReadMe.md  tree.h  tree_task.cpp  tree_test.cpp
